change font and fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,19 +1,14 @@
 :root {
     --pywc-primary: #2e4057;
     --pywc-secondary: #f2dda4;
-    font-family: Inter, sans-serif;
-    font-feature-settings: "liga" 1, "calt" 1;
+    
 }
 
-@supports (font-variation-settings: normal) {
-    :root {
-        font-family: InterVariable, sans-serif;
-    }
-}
+
 
 html {
     margin-right: 0 !important;
-    
+    letter-spacing: -0.3px;
 }
 
 body {
@@ -21,6 +16,8 @@ body {
     color: #fff;
     overflow-x: hidden;
     min-height: 100%;
+    font-family: Archivo, 'Helvetica Neue', sans-serif !important;
+    width: 99%;
 }
 
 a,
@@ -53,7 +50,7 @@ a:hover {
 }
 
 .extrabold {
-    font-weight: 800;
+    font-weight: 600;
 }
 
 .container {
@@ -62,12 +59,13 @@ a:hover {
 
 .title {
     font-size: 24px;
-    font-weight: 800;
+    font-weight: 600;
     text-decoration: none;
 }
 
 .intro {
     font-size: 50px;
+    letter-spacing: -2px;
 }
 
 .card {
@@ -119,7 +117,6 @@ a:hover {
 
 
     .footer {
-        position: absolute;
         bottom: 0;
         width: 100%;
         height: 60px; /* Set the fixed height of the footer here */
